--- a/source/app/views/layout.erb
+++ b/source/app/views/layout.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/application.css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/application.js"></script>
+	<head>
+	  <link rel="stylesheet" href="/css/normalize.css">
+	  <link rel="stylesheet" href="/css/application.css">
+	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	  <script src="/application.js"></script>
 
-  <title></title>
-</head>
-<body>
-  <%= yield %>
-</body>
+	  <title></title>
+	</head>
+	<body>
+		<div class="container">
+			<h1>Idify - Got an App Idea?</h1><hr>
+	  	<%= yield %>
+	  </div>
+	</body>
 </html>
