--- a/source/app/views/layout.erb
+++ b/source/app/views/layout.erb
@@ -4,12 +4,17 @@
 	  <link rel="stylesheet" href="/css/normalize.css">
 	  <link rel="stylesheet" href="/css/application.css">
 	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	  <script src="/application.js"></script>
+	  <script src="/js/application.js"></script>
 
 	  <title></title>
 	</head>
 	<body>
 		<div class="container">
+			<% if current_user %>
+				<a href='/logout'>Logout</a>
+				<a href='/categories'>Home</a>
+				<a href='/profile'>Profile</a>
+			<% end %>
 			<h1>Idify - Got an App Idea?</h1><hr>
 	  	<%= yield %>
 	  </div>
